[kernel] build ethernet drivers as modules
TODO: detect which to load on startup and remove the old /etc/modules
file from rootfs-stage31/data

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -1,22 +1,22 @@
 CONFIG_LOCALVERSION="-openslx"
-CONFIG_8139CP=y
-CONFIG_8139TOO=y
+CONFIG_8139CP=m
+CONFIG_8139TOO=m
 CONFIG_8139TOO_8129=y
 CONFIG_8139TOO_PIO=y
 CONFIG_8139TOO_TUNE_TWISTER=y
-CONFIG_ACENIC=y
+CONFIG_ACENIC=m
 CONFIG_AGP_SIS=y
 CONFIG_AGP_VIA=y
-CONFIG_ATL1=y
-CONFIG_ATL1C=y
-CONFIG_ATL1E=y
-CONFIG_ATL2=y
-CONFIG_ATP=y
+CONFIG_ATL1=m
+CONFIG_ATL1C=m
+CONFIG_ATL1E=m
+CONFIG_ATL2=m
+CONFIG_ATP=m
 CONFIG_AUFS_BDEV_LOOP=y
 CONFIG_AUFS_BRANCH_MAX_127=y
 CONFIG_AUFS_FS=y
 CONFIG_AUFS_SBILIST=y
-CONFIG_B44=y
+CONFIG_B44=m
 CONFIG_B44_PCI=y
 CONFIG_B44_PCICORE_AUTOSELECT=y
 CONFIG_B44_PCI_AUTOSELECT=y
@@ -27,34 +27,34 @@ CONFIG_BACKLIGHT_CARILLO_RANCH=y
 CONFIG_BACKLIGHT_LP855X=y
 CONFIG_BACKLIGHT_PROGEAR=y
 CONFIG_BACKLIGHT_SAHARA=y
-CONFIG_BE2NET=y
+CONFIG_BE2NET=m
 CONFIG_BLK_DEV_CRYPTOLOOP=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 CONFIG_BLK_DEV_NBD=y
 CONFIG_BLK_DEV_PCIESSD_MTIP32XX=y
-CONFIG_BNA=y
-CONFIG_BNX2=y
-CONFIG_BNX2X=y
+CONFIG_BNA=m
+CONFIG_BNX2=m
+CONFIG_BNX2X=m
 CONFIG_BRIDGE=y
-CONFIG_CASSINI=y
-CONFIG_CHELSIO_T1=y
+CONFIG_CASSINI=m
+CONFIG_CHELSIO_T1=m
 CONFIG_CHELSIO_T1_1G=y
-CONFIG_CHELSIO_T3=y
-CONFIG_CHELSIO_T4=y
-CONFIG_CHELSIO_T4VF=y
-CONFIG_CNIC=y
+CONFIG_CHELSIO_T3=m
+CONFIG_CHELSIO_T4=m
+CONFIG_CHELSIO_T4VF=m
+CONFIG_CNIC=m
 CONFIG_CRC16=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRYPTO_CRC32C=y
-CONFIG_DE2104X=y
+CONFIG_DE2104X=m
 CONFIG_DE600=y
 CONFIG_DE620=y
-CONFIG_DL2K=y
+CONFIG_DL2K=m
 CONFIG_DM_SNAPSHOT=y
 CONFIG_DM_THIN_PROVISIONING=y
-CONFIG_DM9102=y
-CONFIG_DNET=y
+CONFIG_DM9102=m
+CONFIG_DNET=m
 CONFIG_DRM=y
 CONFIG_DRM_AST=m
 CONFIG_DRM_CIRRUS_QEMU=m
@@ -85,13 +85,13 @@ CONFIG_DRM_VMWGFX=m
 CONFIG_DRM_VMWGFX_FBCON=y
 CONFIG_DRM_BOCHS=m
 CONFIG_DRM_VIRTIO_GPU=m
-CONFIG_E1000=y
-CONFIG_E1000E=y
-CONFIG_E100=y
-CONFIG_ENIC=y
-CONFIG_EPIC100=y
+CONFIG_E1000=m
+CONFIG_E1000E=m
+CONFIG_E100=m
+CONFIG_ENIC=m
+CONFIG_EPIC100=m
 CONFIG_ETHERNET=y
-CONFIG_ETHOC=y
+CONFIG_ETHOC=m
 CONFIG_EXPORTFS=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
@@ -101,40 +101,40 @@ CONFIG_EXT4_USE_FOR_EXT23=y
 CONFIG_EXYNOS_VIDEO=y
 CONFIG_FB_BOOT_VESA_SUPPORT=y
 CONFIG_FB_VESA=y
-CONFIG_FEALNX=y
-CONFIG_FORCEDETH=y
+CONFIG_FEALNX=m
+CONFIG_FORCEDETH=m
 CONFIG_FUSE_FS=y
 CONFIG_GENERIC_GPIO=y
 CONFIG_GPIOLIB=y
-CONFIG_HAPPYMEAL=y
+CONFIG_HAPPYMEAL=m
 CONFIG_HID_GENERIC=y
-CONFIG_HP100=y
-CONFIG_IGB=y
-CONFIG_IGBVF=y
+CONFIG_HP100=m
+CONFIG_IGB=m
+CONFIG_IGBVF=m
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_IP1000=y
 CONFIG_INPUT_EVBUG=n
-CONFIG_IXGB=y
-CONFIG_IXGBE=y
-CONFIG_IXGBEVF=y
+CONFIG_IXGB=m
+CONFIG_IXGBE=m
+CONFIG_IXGBEVF=m
 CONFIG_JBD2=y
-CONFIG_JME=y
+CONFIG_JME=m
 CONFIG_KERNEL_XZ=y
-CONFIG_KS8851_MLL=y
-CONFIG_KSZ884X_PCI=y
+CONFIG_KS8851_MLL=m
+CONFIG_KSZ884X_PCI=m
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_LCD_PLATFORM=y
 CONFIG_LIBCRC32C=y
 CONFIG_MDIO=y
-CONFIG_MLX4_CORE=y
+CONFIG_MLX4_CORE=m
 CONFIG_MLX4_DEBUG=y
-CONFIG_MLX4_EN=y
-CONFIG_MYRI10GE=y
-CONFIG_NATSEMI=y
-CONFIG_NE2K_PCI=y
-CONFIG_NETXEN_NIC=y
-CONFIG_NET_CALXEDA_XGMAC=y
+CONFIG_MLX4_EN=m
+CONFIG_MYRI10GE=m
+CONFIG_NATSEMI=m
+CONFIG_NE2K_PCI=m
+CONFIG_NETXEN_NIC=m
+CONFIG_NET_CALXEDA_XGMAC=m
 CONFIG_NET_PACKET_ENGINE=y
 CONFIG_NET_TULIP=y
 CONFIG_NET_VENDOR_3COM=y
@@ -175,29 +175,29 @@ CONFIG_NET_VENDOR_TEHUTI=y
 CONFIG_NET_VENDOR_TI=y
 CONFIG_NET_VENDOR_VIA=y
 CONFIG_NET_VENDOR_XIRCOM=y
-CONFIG_NIU=y
-CONFIG_NS83820=y
+CONFIG_NIU=m
+CONFIG_NS83820=m
 CONFIG_OVERLAYFS_FS=y
 CONFIG_PACKET=y
 CONFIG_PARPORT=y
-CONFIG_PCH_GBE=y
-CONFIG_PCMCIA_XIRCOM=y
-CONFIG_PCNET32=y
-CONFIG_QLA3XXX=y
-CONFIG_QLCNIC=y
-CONFIG_QLGE=y
-CONFIG_R6040=y
-CONFIG_R8169=y
-CONFIG_S2IO=y
-CONFIG_SC92031=y
+CONFIG_PCH_GBE=m
+CONFIG_PCMCIA_XIRCOM=m
+CONFIG_PCNET32=m
+CONFIG_QLA3XXX=m
+CONFIG_QLCNIC=m
+CONFIG_QLGE=m
+CONFIG_R6040=m
+CONFIG_R8169=m
+CONFIG_S2IO=m
+CONFIG_SC92031=m
 CONFIG_SEEQ8005=y
-CONFIG_SFC=y
+CONFIG_SFC=m
 CONFIG_SFC_MCDI_MON=y
-CONFIG_SIS190=y
-CONFIG_SIS900=y
-CONFIG_SKGE=y
-CONFIG_SKY2=y
-CONFIG_SMSC9420=y
+CONFIG_SIS190=m
+CONFIG_SIS900=m
+CONFIG_SKGE=m
+CONFIG_SKY2=m
+CONFIG_SMSC9420=m
 CONFIG_SMSC_PHY=y
 CONFIG_SQUASHFS=y
 CONFIG_SQUASHFS_LZO=y
@@ -211,36 +211,36 @@ CONFIG_SSB_PCIHOST=y
 CONFIG_SSB_PCIHOST_POSSIBLE=y
 CONFIG_SSB_PCMCIAHOST_POSSIBLE=y
 CONFIG_SSB_SPROM=y
-CONFIG_STMMAC_ETH=y
-CONFIG_STMMAC_PCI=y
-CONFIG_STMMAC_PLATFORM=y
+CONFIG_STMMAC_ETH=m
+CONFIG_STMMAC_PCI=m
+CONFIG_STMMAC_PLATFORM=m
 CONFIG_STMMAC_RING=y
 CONFIG_STUB_POULSBO=y
-CONFIG_SUNDANCE=y
+CONFIG_SUNDANCE=m
 CONFIG_SUNDANCE_MMIO=y
-CONFIG_SUNGEM=y
+CONFIG_SUNGEM=m
 CONFIG_SUNGEM_PHY=y
-CONFIG_TIGON3=y
-CONFIG_TLAN=y
-CONFIG_TULIP=y
-CONFIG_TYPHOON=y
+CONFIG_TIGON3=m
+CONFIG_TLAN=m
+CONFIG_TULIP=m
+CONFIG_TYPHOON=m
 CONFIG_UIO=y
-CONFIG_ULI526X=y
+CONFIG_ULI526X=m
 CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_USB_EHCI_TT_NEWSCHED=y
 CONFIG_USB_HID=y
 CONFIG_VGASTATE=y
 CONFIG_VGA_SWITCHEROO=y
-CONFIG_VIA_RHINE=y
+CONFIG_VIA_RHINE=m
 CONFIG_VIA_RHINE_MMIO=y
-CONFIG_VIA_VELOCITY=y
+CONFIG_VIA_VELOCITY=m
 CONFIG_VIRTIO_BLK=y
 CONFIG_VIRTIO_BLK_SCSI=y
 CONFIG_VIRTIO_NET=y
 CONFIG_VMXNET3=y
-CONFIG_VORTEX=y
-CONFIG_VXGE=y
-CONFIG_WINBOND_840=y
+CONFIG_VORTEX=m
+CONFIG_VXGE=m
+CONFIG_WINBOND_840=m
 CONFIG_XFS_FS=y
 CONFIG_ZNET=y
 CONFIG_IP_PNP=n
@@ -256,7 +256,7 @@ CONFIG_INTEL_IOMMU_DEFAULT_ON=y
 CONFIG_ALLOW_LOCKDOWN_LIFT=y
 CONFIG_ARCH_HAS_MMIO_FLUSH=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
-CONFIG_BCMGENET=y
+CONFIG_BCMGENET=m
 CONFIG_BLK_CPQ_CISS_DA=m
 CONFIG_CISS_SCSI_TAPE=y
 CONFIG_DRM_KMS_HELPER=y
