--- a/core/modules/hardware-stats/data/etc/systemd/system/shutdown-usage-log.service
+++ b/core/modules/hardware-stats/data/etc/systemd/system/shutdown-usage-log.service
@@ -2,11 +2,13 @@
 Description=Tell server we're shutting down
 DefaultDependencies=no
 Before=shutdown.target
+Requires=network-online.target
 After=-.mount network-online.target
 RefuseManualStart=yes
 
 [Service]
 Type=oneshot
-ExecStart=/opt/openslx/scripts/shutdown-system_usage_update
+ExecStartPre=/opt/openslx/scripts/shutdown-system_usage_update
+ExecStart=/bin/true
 RemainAfterExit=yes
 
