[lightdm-greeter-bwlp] Support branding.d, fetch roomplan

--- a/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
+++ b/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
@@ -16,7 +16,10 @@
 loginform-offset-x=50%
 loginform-offset-y=50%
 greeter-banner-image=/opt/openslx/lightdm/bwlp-banner.svg
-greeter-bottom-left-logo-path=/etc/branding.svg
+; from legacy config module
+greeter-bottom-left-logo-file=/etc/branding.svg
+; new directory style
+greeter-bottom-left-logo-path=/etc/branding.d
 greeter-background-gradient=e8e6e7 ffffff e8e6e7 ffd78b
 greeter-message-file=/run/hw-warnings.log
 auto-login-check-cmd=/opt/openslx/lightdm/is-autologin-enabled
