[hardware-stats] Use ExecStop for shutdown notification
Try a different approach: Since out initial hardware-stats service
logging the poweron event is a oneshot with RemainAfterExit set, make
the shutdown reporting script its ExecStop line (and hope that this
works reliably on shutdown).

--- a/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
+++ b/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
@@ -1,11 +1,11 @@
 [Unit]
 Description=Gather statistics about this machine and send to boot server
-DefaultDependencies=no
-After=tmp.target mount-vm-store.service
+After=tmp.target mount-vm-store.service network.target
 Wants=tmp.target
 
 [Service]
 Type=oneshot
 ExecStart=/opt/openslx/scripts/systemd-hardware_stats
 RemainAfterExit=yes
+ExecStop=/opt/openslx/scripts/shutdown-system_usage_update
 
