[slx-issue] Make issue generator even smarter

--- a/core/modules/slx-issue/templates/issue.template
+++ b/core/modules/slx-issue/templates/issue.template
@@ -1,9 +1,9 @@
-   WELCOME TO %space% \n (\l)
+   WELCOME TO %minspace% %hostname% (\l)
             _____  ______  ______ __    __    _______ __     __    __
-           /  _   |   _   |   ___|  |  |  |  |   ____|  |   |  |  |  |
-          |  | |  |  |_|  |  |_  |   |    |  |  |___ |  |        /  /
-          |  | |  |   ___/|   _|      |   |   ____   |  |     |    |
-          |  |_|  |  |    |  |___|  |  |  |   ____|  |  |___ /  /
-            _____/|__|    |______|__|  |__|  |_______|______|__|  |__| - NG
+          /  _   |   _   |   ___|  |  |  |  |   ____|  |   |  |  |  |
+         |  | |  |  |_|  |  |_  |   |    |  |  |___ |  |        /  /
+         |  | |  |   ___/|   _|      |   |   ____   |  |     |    |
+         |  |_|  |  |    |  |___|  |  |  |   ____|  |  |___ /  /
+           _____/|__|    |______|__|  |__|  |_______|______|__|  |__| - NG
 
-   %version%           (c) <OpenSLX.ORG>
+   %version% %space% (c) <OpenSLX.ORG>
