[kexec-reboot] Be a bit more agressive enabling it

--- a/core/modules/kexec-reboot/data/etc/systemd/system/enable-kexec-reboot.service
+++ b/core/modules/kexec-reboot/data/etc/systemd/system/enable-kexec-reboot.service
@@ -4,4 +4,4 @@ DefaultDependencies=no
 
 [Service]
 Type=oneshot
-ExecStart=/bin/sh -c "systemctl enable kexec.target"
+ExecStart=/bin/sh -c "rm -f /etc/systemd/system/ctrl-alt-del.target; systemctl enable kexec.target; exit 0"
