--- a/core/modules/nvidia-libs/module.conf
+++ b/core/modules/nvidia-libs/module.conf
@@ -1,7 +1,4 @@
 #!/bin/bash
-REQUIRED_VERSION="410.93"
-REQUIRED_NVIDIA="NVIDIA-Linux-x86_64-$REQUIRED_VERSION.run"
-REQUIRED_URL="http://download.nvidia.com/XFree86/Linux-x86_64/$REQUIRED_VERSION/$REQUIRED_NVIDIA"
 
 REQUIRED_FILES="
 				/etc/OpenCL/vendors/nvidia.icd
@@ -17,5 +14,9 @@ REQUIRED_DIRECTORIES="
 				/usr/share/egl
 				/usr/share/glvnd
 				/usr/share/X11
+"
+
+REQUIRED_MODULES="
+	nvidia-common
 "
 
