[xscreensaver/idleaction] Use idle-daemon

--- a/core/modules/idleaction/module.conf
+++ b/core/modules/idleaction/module.conf
@@ -1,6 +1,11 @@
 #!/bin/bash
 REQUIRED_BINARIES="
+	idle-daemon
 	xprintidle
 	xprintlocktime
+"
+
+REQUIRED_GIT="
+	https://git.openslx.org/openslx-ng/idle-daemon.git
 "
 
