[idleaction] Fix .service file

--- a/core/modules/idleaction/data/etc/systemd/system/idle-daemon.service
+++ b/core/modules/idleaction/data/etc/systemd/system/idle-daemon.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=OpenSLX idle-daemon
 
-[Server]
+[Service]
 ExecStart=/opt/openslx/scripts/idle-daemon-launcher
 Restart=on-failure
 RestartSec=1
