[lightdm] fix typo in service

--- a/core/modules/lightdm/data/etc/systemd/system/lightdm.service
+++ b/core/modules/lightdm/data/etc/systemd/system/lightdm.service
@@ -2,7 +2,7 @@
 Description=LightDM Display Manager
 Conflicts=getty@tty7.service
 Requires=dev-tty7.device
-After=dev-tty7.device systemd-user-sessions.service load-gfx-driver.service setup-slx-addon@vmware.service setup-slx-addmon@virtualbox.service
+After=dev-tty7.device systemd-user-sessions.service load-gfx-driver.service setup-slx-addon@vmware.service setup-slx-addon@virtualbox.service
 
 [Service]
 ExecStart=/usr/sbin/lightdm
