[xorg] add missing gl vendor mesa def file
libegl-mesa0 registers the libEGL_mesa extension via /usr/share/glvnd/egl_vendor.d/

--- a/core/modules/xorg/module.conf
+++ b/core/modules/xorg/module.conf
@@ -17,11 +17,12 @@ REQUIRED_BINARIES="
 			xauth
 "
 REQUIRED_DIRECTORIES="
-			/usr/share/X11
-			/usr/share/fonts
 			/etc/fonts
 			/usr/bin
 			/usr/lib
+			/usr/share/fonts
+			/usr/share/glvnd
+			/usr/share/X11
 "
 REQUIRED_FILES="
 "
