--- a/core/modules/dnbd3/module.conf
+++ b/core/modules/dnbd3/module.conf
@@ -1,7 +1,6 @@
 #!/bin/bash
 REQUIRED_MODULES="kernel"
-REQUIRED_GIT="git://git.openslx.org/dnbd3.git"
-REQUIRED_COMMIT="0d8497bbb79f7eb574409c84de825067db3bd06f"
+REQUIRED_GIT="https://git.openslx.org/dnbd3.git"
 REQUIRED_BINARIES="
 	dnbd3-client
 	dnbd3-fuse
