[sudo] ADD FILES FGUCKWFEQ

--- a/core/modules/sudo/module.conf
+++ b/core/modules/sudo/module.conf
@@ -3,4 +3,9 @@ REQUIRED_BINARIES="
 	sudo
 "
 REQUIRED_LIBRARIES=""
-REQUIRED_DIRECTORIES=""
+REQUIRED_FILES="
+	/etc/pam.d/sudo
+"
+REQUIRED_DIRECTORIES="
+	/usr/lib/sudo
+"
