[pam] Get recent pam_script from github

--- a/core/modules/pam/module.conf
+++ b/core/modules/pam/module.conf
@@ -24,5 +24,6 @@ REQUIRED_SYSTEM_FILES="
 	/etc/login.defs
 	/etc/securetty
 "
-REQUIRED_PAM_SCRIPT_VERSION="1.1.6"
-REQUIRED_PAM_SCRIPT_URL="http://downloads.sourceforge.net/project/pam-script/pam-script-${REQUIRED_PAM_SCRIPT_VERSION}.tar.gz"
+REQUIRED_GIT="
+	https://github.com/jeroennijhof/pam_script.git
+"
