--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -286,3 +286,11 @@ CONFIG_CIFS_SMB2=y
 CONFIG_CIFS_SMB311=y
 CONFIG_DRM_AMD_DC_DCN1_0=y
 CONFIG_X86_MSR=m
+CONFIG_BLK_DEV_INITRD=y
+CONFIG_MICROCODE=y
+CONFIG_MICROCODE_INTEL=y
+CONFIG_MICROCODE_AMD=y
+CONFIG_MICROCODE_OLD_INTERFACE=y
+CONFIG_MICROCODE_EARLY=y
+CONFIG_MICROCODE_INTEL_EARLY=y
+CONFIG_MICROCODE_AMD_EARLY=y
