[idleaction] Stop logind from killing user processes on logout
This turned out to be a little too agressive; We run some async jobs on
session close that were killed by logind. Defer the process cleanup
until idle-daemon sees that the user doesn't have any more open
sessions.

--- a/core/modules/idleaction/data/etc/systemd/logind.conf.d/00-bwlp-default.conf
+++ b/core/modules/idleaction/data/etc/systemd/logind.conf.d/00-bwlp-default.conf
@@ -1,6 +1,5 @@
 [Login]
-KillUserProcesses=yes
-KillExcludeUsers=root
+KillUserProcesses=no
 IdleAction=ignore
 HandleLidSwitch=ignore
 HandleLidSwitchDocked=ignore
