[run-virt] Make dhcpd its own service
Closes #3540
Closes #3501

--- a/core/modules/run-virt/data/opt/openslx/vmchooser/config/udhcpd-nat1.conf
+++ b/core/modules/run-virt/data/opt/openslx/vmchooser/config/udhcpd-nat1.conf
@@ -32,7 +32,7 @@ offer_time      6000
 lease_file      /var/lib/udhcpd/udhcpd-nat1.leases
 
 # location of the pid file
-pidfile         /var/run/udhcpd-nat1.pid
+pidfile         /run/udhcpd-nat1.pid
 
 option  dns     %DNSSERVER%
 option  subnet  255.255.255.0
@@ -41,18 +41,5 @@ option  wins    %WINS%
 option  domain  %DOMAIN%
 option  search  %SEARCH%
 option  lprsrv  192.168.101.1
-#option ntpsrv  NTPSERVER
-
-# additional options known to udhcpd not used in OpenSLX at the moment
-#subnet                 #timezone
-#router                 #timesvr
-#namesvr                #dns
-#logsvr                 #cookiesvr
-#lprsvr                 #bootsize
-#domain                 #swapsvr
-#rootpath               #ipttl
-#mtu                    #broadcast
-#wins                   #lease
-#ntpsrv                 #tftp
-#bootfile               #wpad
+option  ntpsrv  %NTPSERVER%
 
