[*] introduce system-check
* hardware stats now only reports hardware info data in /run/hwinfo and
/run/hwreport
* system-check hooks will generate lightdm warnings and curl the report
to the satellite
* run-virt now handles the ID44 warnings to cope for network shares on
/tmp/virt

WARNING PROFI111!

--- a/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
+++ b/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=Gather statistics about this machine and send to boot server
 After=tmp.target mount-vm-store.service network.target
-Wants=tmp.target
+Wants=tmp.target system-check.service
+Before=system-check.service
 
 [Service]
 Type=oneshot
