[system-check] added description

--- a/core/modules/system-check/data/etc/systemd/system/system-check.service
+++ b/core/modules/system-check/data/etc/systemd/system/system-check.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=todo
+Description=Report system checks
 Before=display-manager.service
 Wants=network-online.target
 After=network-online.target
