[etherwake] Replace etherwake by jawol

--- a/core/modules/etherwake/module.conf
+++ b/core/modules/etherwake/module.conf
@@ -1,6 +1,7 @@
 #!/bin/bash
+REQUIRED_GIT="https://git.openslx.org/openslx-ng/jawol.git"
 REQUIRED_BINARIES="
-	etherwake
+	jawol
 	ethtool
 "
 REQUIRED_FILES="
