[hardware-stats] explicitely wait on run-virt-env
fixes race condition where /tmp/virt is not created, before
hardware-stats tries to detect if it is mounted or not.

--- a/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
+++ b/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Gather statistics about this machine and send to boot server
-After=tmp.target mount-vm-store.service network.target
+After=tmp.target mount-vm-store.service network.target run-virt-env.service
 Wants=tmp.target system-check.service
 Before=system-check.service
 
