[lightdm*] make sure nothing wraps the greeter
with the new stage4, the default lightdm configs wrapped the greeter
call with some dbus-daemon spawning script which somehow led to lightdm
not killing Xorg when all user processes were gone.

The problem file is /usr/share/lightdm/lightdm.conf.d/50-greeter-wrapper.conf
I thought it'd be better to specify our trivial wrapper instead of
simply removing that config file...

NOTE: do we break anything else from the Stage4 if we do not wrap the
greeter like the lightdm packages try to?

--- a/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/lightdm.conf.d/10-openslx.conf
+++ b/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/lightdm.conf.d/10-openslx.conf
@@ -1,7 +1,7 @@
 [SeatDefaults]
 greeter-hide-users=true
 greeter-session=qt-lightdm-greeter
-
+greeter-wrapper=/opt/openslx/lightdm/greeter-wrapper
 greeter-allow-guest=true
 allow-guest=true
 guest-wrapper=/opt/openslx/lightdm/guest-session
