--- a/core/modules/vmware15/module.conf
+++ b/core/modules/vmware15/module.conf
@@ -15,6 +15,7 @@ REQUIRED_DIRECTORIES="
 	/usr/lib/vmware/scripts
 	/usr/lib/vmware/share
 	/usr/lib/vmware/xkeymap
+	/usr/lib/vmware/vnckeymap
 "
 REQUIRED_FILES="
 	/usr/lib/vmware/config
