[nvidia_libs] make whiteout list optional

--- a/core/modules/nvidia-libs/module.conf
+++ b/core/modules/nvidia-libs/module.conf
@@ -2,7 +2,7 @@
 
 REQUIRED_FILES="
 				/etc/OpenCL/vendors/nvidia.icd
-				/opt/openslx/etc/nvidia.whiteout
+				@/opt/openslx/etc/nvidia.whiteout
 "
 
 REQUIRED_DIRECTORIES="
