kernel.wanted.config: Add USB stuff

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -144,16 +144,20 @@ CONFIG_NET_VENDOR_8390=y
 CONFIG_NET_VENDOR_ADAPTEC=y
 CONFIG_NET_VENDOR_ALTEON=y
 CONFIG_NET_VENDOR_AMD=y
+CONFIG_NET_VENDOR_ARC=y
 CONFIG_NET_VENDOR_ATHEROS=y
+CONFIG_NET_VENDOR_AURORA=y
 CONFIG_NET_VENDOR_BROADCOM=y
 CONFIG_NET_VENDOR_BROCADE=y
 CONFIG_NET_VENDOR_CHELSIO=y
+CONFIG_NET_VENDOR_CIRRUS=y
 CONFIG_NET_VENDOR_CISCO=y
 CONFIG_NET_VENDOR_DEC=y
 CONFIG_NET_VENDOR_DLINK=y
 CONFIG_NET_VENDOR_EMULEX=y
 CONFIG_NET_VENDOR_EXAR=y
 CONFIG_NET_VENDOR_FUJITSU=y
+CONFIG_NET_VENDOR_GOOGLE=y
 CONFIG_NET_VENDOR_HP=y
 CONFIG_NET_VENDOR_I825XX=y
 CONFIG_NET_VENDOR_INTEL=y
@@ -176,6 +180,7 @@ CONFIG_NET_VENDOR_SUN=y
 CONFIG_NET_VENDOR_TEHUTI=y
 CONFIG_NET_VENDOR_TI=y
 CONFIG_NET_VENDOR_VIA=y
+CONFIG_NET_VENDOR_XILINX=y
 CONFIG_NET_VENDOR_XIRCOM=y
 CONFIG_NIU=m
 CONFIG_NS83820=m
@@ -276,7 +281,7 @@ CONFIG_ROCKCHIP_PHY=y
 CONFIG_SECURITY_NO_EXCLUSIVE_LSM=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SFC_MTD=y
-CONFIG_VERSION_SIGNATURE="2017-12-22 Config"
+CONFIG_VERSION_SIGNATURE=n
 CONFIG_X86_5LEVEL=n
 CONFIG_ZRAM=m
 CONFIG_SPI_INTEL_SPI_PLATFORM=n
@@ -294,3 +299,265 @@ CONFIG_MICROCODE_OLD_INTERFACE=y
 CONFIG_MICROCODE_EARLY=y
 CONFIG_MICROCODE_INTEL_EARLY=y
 CONFIG_MICROCODE_AMD_EARLY=y
+CONFIG_SYSTEM_TRUSTED_KEYS=n
+CONFIG_64BIT_TIME=y
+CONFIG_ACPI_AC=y
+CONFIG_ACPI_ADXL=y
+CONFIG_ACPI_BATTERY=y
+CONFIG_ACPI_BUTTON=y
+CONFIG_ACPI_FAN=y
+CONFIG_ACPI_THERMAL=y
+CONFIG_AMD_IOMMU_V2=y
+CONFIG_ANDROID_BINDER_DEVICES=n
+CONFIG_ARCH_CLOCKSOURCE_INIT=y
+CONFIG_BACKLIGHT_88PM860X=m
+CONFIG_BACKLIGHT_AAT2870=m
+CONFIG_BACKLIGHT_ADP5520=m
+CONFIG_BACKLIGHT_ARCXCNN=m
+CONFIG_BACKLIGHT_AS3711=m
+CONFIG_BACKLIGHT_BD6107=m
+CONFIG_BACKLIGHT_DA903X=m
+CONFIG_BACKLIGHT_DA9052=m
+CONFIG_BACKLIGHT_GENERIC=m
+CONFIG_BACKLIGHT_GPIO=m
+CONFIG_BACKLIGHT_LM3533=m
+CONFIG_BACKLIGHT_LM3630A=m
+CONFIG_BACKLIGHT_LM3639=m
+CONFIG_BACKLIGHT_LP8788=m
+CONFIG_BACKLIGHT_LV5207LP=m
+CONFIG_BACKLIGHT_MAX8925=m
+CONFIG_BACKLIGHT_PANDORA=m
+CONFIG_BACKLIGHT_PCF50633=m
+CONFIG_BACKLIGHT_PM8941_WLED=m
+CONFIG_BACKLIGHT_PWM=m
+CONFIG_BACKLIGHT_RAVE_SP=m
+CONFIG_BACKLIGHT_SAHARA=y
+CONFIG_BACKLIGHT_SKY81452=m
+CONFIG_BACKLIGHT_WM831X=m
+CONFIG_BATTERY_88PM860X=m
+CONFIG_BATTERY_AXP20X=m
+CONFIG_BATTERY_BQ27XXX_I2C=m
+CONFIG_BATTERY_BQ27XXX=m
+CONFIG_BATTERY_DA9030=m
+CONFIG_BATTERY_DA9052=m
+CONFIG_BATTERY_DA9150=m
+CONFIG_BATTERY_DS2760=m
+CONFIG_BATTERY_DS2780=m
+CONFIG_BATTERY_DS2781=m
+CONFIG_BATTERY_DS2782=m
+CONFIG_BATTERY_GAUGE_LTC2941=m
+CONFIG_BATTERY_MAX17040=m
+CONFIG_BATTERY_MAX1721X=m
+CONFIG_BATTERY_RT5033=m
+CONFIG_BATTERY_RX51=m
+CONFIG_BATTERY_SBS=m
+CONFIG_BATTERY_TWL4030_MADC=m
+CONFIG_BPFILTER_UMH=m
+CONFIG_BPFILTER=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
+CONFIG_BPF_JIT=y
+CONFIG_BUILD_SALT=n
+CONFIG_CDROM=y
+CONFIG_CEC_NOTIFIER=y
+CONFIG_CEC_PLATFORM_DRIVERS=y
+CONFIG_CHELSIO_IPSEC_INLINE=y
+CONFIG_CONSOLE_POLL=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_IDLE_GOV_TEO=y
+CONFIG_CPU_SUP_ZHAOXIN=y
+CONFIG_CRYPTO_CRC32C_INTEL=y
+CONFIG_CRYPTO_DEV_CHELSIO_TLS=m
+CONFIG_CRYPTO_DEV_NITROX_CNN55XX=m
+CONFIG_CRYPTO_DEV_NITROX=m
+CONFIG_CRYPTO_RNG_DEFAULT=y
+CONFIG_CRYPTO_RNG=y
+CONFIG_DELL_UART_BACKLIGHT=m
+CONFIG_DNS_RESOLVER=m
+CONFIG_DRM_GEM_CMA_HELPER=y
+CONFIG_DRM_GEM_SHMEM_HELPER=y
+CONFIG_EFI_EARLYCON=y
+CONFIG_EFIVAR_FS=y
+CONFIG_EFI_VARS=y
+CONFIG_HSA_AMD=y
+CONFIG_HYPERV_IOMMU=y
+CONFIG_HWSPINLOCK=y
+CONFIG_I2C_AMD_MP2=m
+CONFIG_I2C_BCM2048=m
+CONFIG_I2C_NVIDIA_GPU=m
+CONFIG_INPUT_BMA150=m
+CONFIG_INPUT_CMA3000_I2C=m
+CONFIG_INPUT_CMA3000=m
+CONFIG_INPUT_DA9052_ONKEY=m
+CONFIG_INPUT_DA9055_ONKEY=m
+CONFIG_INPUT_DA9063_ONKEY=m
+CONFIG_INPUT_DRV260X_HAPTICS=m
+CONFIG_INPUT_DRV2665_HAPTICS=m
+CONFIG_INPUT_DRV2667_HAPTICS=m
+CONFIG_INPUT_E3X0_BUTTON=m
+CONFIG_INPUT_EVDEV=y
+CONFIG_INTEL_BXT_PMIC_THERMAL=m
+CONFIG_INTEL_BXTWC_PMIC_TMU=m
+CONFIG_INTEL_CHTDC_TI_PWRBTN=m
+CONFIG_INTEL_ISH_FIRMWARE_DOWNLOADER=m
+CONFIG_INTEL_MEI_HDCP=m
+CONFIG_INTEL_TH_ACPI=m
+CONFIG_ISA_BUS_API=y
+CONFIG_ISA_BUS=y
+CONFIG_IXGBE_IPSEC=y
+CONFIG_IXGBEVF_IPSEC=y
+CONFIG_KERNEL_GZIP=y
+CONFIG_KEYBOARD_ADC=m
+CONFIG_KEYBOARD_ADP5520=m
+CONFIG_KEYBOARD_ADP5589=m
+CONFIG_KEYBOARD_APPLESPI=m
+CONFIG_KEYBOARD_CROS_EC=m
+CONFIG_KEYBOARD_DLINK_DIR685=m
+CONFIG_KEYBOARD_GPIO_POLLED=m
+CONFIG_KEYBOARD_LM8333=m
+CONFIG_KEYBOARD_MATRIX=m
+CONFIG_KEYBOARD_MCS=m
+CONFIG_KEYBOARD_MPR121=m
+CONFIG_KEYBOARD_MTK_PMIC=m
+CONFIG_KEYBOARD_QT1050=m
+CONFIG_KEYBOARD_QT1070=m
+CONFIG_KEYBOARD_SAMSUNG=m
+CONFIG_KEYBOARD_TCA6416=m
+CONFIG_KEYBOARD_TCA8418=m
+CONFIG_KEYBOARD_TM2_TOUCHKEY=m
+CONFIG_KEYBOARD_TWL4030=m
+CONFIG_KEYS_REQUEST_CACHE=y
+CONFIG_MMC=y
+CONFIG_MODULE_SIG_KEY=n
+CONFIG_MOUSE_PS2_TOUCHKIT=y
+CONFIG_MTRR_SANITIZER_ENABLE_DEFAULT=1
+CONFIG_NETWORK_PHY_TIMESTAMPING=y
+CONFIG_NF_CONNTRACK_BRIDGE=m
+CONFIG_NF_NAT_MASQUERADE=y
+CONFIG_NFS_V4_1_MIGRATION=y
+CONFIG_NO_HZ=y
+CONFIG_NOP_USB_XCEIV=m
+CONFIG_PATA_ACPI=m
+CONFIG_PATA_LEGACY=m
+CONFIG_PATA_OPTIDMA=m
+CONFIG_PATA_OPTI=m
+CONFIG_PATA_PLATFORM=m
+CONFIG_PATA_RADISYS=m
+CONFIG_PATA_SIS=y
+CONFIG_PCIE_DW_EP=y
+CONFIG_PCIE_DW_HOST=y
+CONFIG_PCIE_DW_PLAT_EP=y
+CONFIG_PCIE_DW_PLAT_HOST=y
+CONFIG_PCIE_DW_PLAT=y
+CONFIG_PCIE_DW=y
+CONFIG_PCI_ENDPOINT=y
+CONFIG_PMBUS=m
+CONFIG_POWER_RESET_RESTART=y
+CONFIG_POWER_RESET=y
+CONFIG_POWER_SUPPLY_HWMON=y
+CONFIG_SATA_AHCI_PLATFORM=m
+CONFIG_SATA_DWC=m
+CONFIG_SATA_DWC_OLD_DMA=y
+CONFIG_SATA_INIC162X=m
+CONFIG_SCSI_AHA1740=m
+CONFIG_SCSI_FDOMAIN=m
+CONFIG_SCSI_FDOMAIN_PCI=m
+CONFIG_SCSI_FLASHPOINT=y
+CONFIG_SCSI_IMM=m
+CONFIG_SCSI_IPR_DUMP=y
+CONFIG_SCSI_MYRB=m
+CONFIG_SCSI_MYRS=m
+CONFIG_SCSI=y
+CONFIG_SND_SIMPLE_CARD=m
+CONFIG_SND_SIMPLE_CARD_UTILS=m
+CONFIG_SND_SOC_AC97_BUS=y
+CONFIG_SND_SOC_AC97_CODEC=m
+CONFIG_SQUASHFS_FILE_DIRECT=y
+CONFIG_TTY_PRINTK_LEVEL=6
+CONFIG_TTY_PRINTK=y
+CONFIG_USB_AMD5536UDC=m
+CONFIG_USB_AUDIO=m
+CONFIG_USB_AUTOSUSPEND_DELAY=2
+CONFIG_USB_BDC_PCI=m
+CONFIG_USB_BDC_UDC=m
+CONFIG_USB_C67X00_HCD=m
+CONFIG_USB_CDC_COMPOSITE=m
+CONFIG_USB_CHIPIDEA_HOST=y
+CONFIG_USB_CHIPIDEA=m
+CONFIG_USB_CHIPIDEA_PCI=m
+CONFIG_USB_CHIPIDEA_UDC=y
+CONFIG_USB_COMMON=y
+CONFIG_USB_DWC2_HOST=y
+CONFIG_USB_DWC2_PCI=m
+CONFIG_USB_DWC2=y
+CONFIG_USB_DWC3_DUAL_ROLE=y
+CONFIG_USB_DWC3_HAPS=m
+CONFIG_USB_DWC3=m
+CONFIG_USB_DWC3_PCI=m
+CONFIG_USB_DWC3_ULPI=y
+CONFIG_USB_EHCI_FSL=m
+CONFIG_USB_EHCI_HCD_PLATFORM=y
+CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_EHCI_PCI=y
+CONFIG_USB_ETH_EEM=y
+CONFIG_USB_FOTG210_HCD=m
+CONFIG_USB_FOTG210_UDC=m
+CONFIG_USB_G_ACM_MS=m
+CONFIG_USB_GADGET_TARGET=m
+CONFIG_USB_G_DBGP=m
+CONFIG_USB_G_DBGP_SERIAL=y
+CONFIG_USB_G_HID=m
+CONFIG_USB_G_NCM=m
+CONFIG_USB_G_NOKIA=m
+CONFIG_USB_GOKU=m
+CONFIG_USB_GPIO_VBUS=m
+CONFIG_USB_G_PRINTER=m
+CONFIG_USB_GR_UDC=m
+CONFIG_USB_HCD_BCMA=m
+CONFIG_USB_HCD_SSB=m
+CONFIG_USB_HSIC_USB3503=m
+CONFIG_USB_HSIC_USB4604=m
+CONFIG_USB_HUB_USB251XB=m
+CONFIG_USBIP_VHCI_HC_PORTS=8
+CONFIG_USBIP_VHCI_NR_HCS=1
+CONFIG_USB_ISP116X_HCD=m
+CONFIG_USB_ISP1301=m
+CONFIG_USB_ISP1760_DUAL_ROLE=y
+CONFIG_USB_ISP1760_HCD=y
+CONFIG_USB_ISP1760=m
+CONFIG_USB_ISP1761_UDC=y
+CONFIG_USB_KBD=m
+CONFIG_USB_LINK_LAYER_TEST=m
+CONFIG_USB_MASS_STORAGE=m
+CONFIG_USB_MAX3421_HCD=m
+CONFIG_USB_MOUSE=m
+CONFIG_USB_MUSB_DUAL_ROLE=y
+CONFIG_USB_MUSB_HDRC=m
+CONFIG_USB_MV_U3D=m
+CONFIG_USB_MV_UDC=m
+CONFIG_USB_NET2272_DMA=y
+CONFIG_USB_NET2272=m
+CONFIG_USB_OHCI_HCD_PCI=y
+CONFIG_USB_OHCI_HCD_PLATFORM=y
+CONFIG_USB_OHCI_HCD=y
+CONFIG_USB_OXU210HP_HCD=m
+CONFIG_USB_PHY=y
+CONFIG_USB_PXA27X=m
+CONFIG_USB_R8A66597_HCD=m
+CONFIG_USB_R8A66597=m
+CONFIG_USB_ROLES_INTEL_XHCI=m
+CONFIG_USB_SI4713=m
+CONFIG_USB_SL811_HCD_ISO=y
+CONFIG_USB_SNP_CORE=m
+CONFIG_USB_UHCI_HCD=y
+CONFIG_USB_ULPI_BUS=m
+CONFIG_USB_XHCI_DBGCAP=y
+CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_XHCI_PCI=y
+CONFIG_USB_XHCI_PLATFORM=m
+CONFIG_USB=y
+CONFIG_USB_ZERO=m
+CONFIG_U_SERIAL_CONSOLE=y
+CONFIG_USERIO=m
+
