[nvidia*] force symlink creation

--- a/core/modules/nvidia-libs/module.conf
+++ b/core/modules/nvidia-libs/module.conf
@@ -9,10 +9,7 @@ REQUIRED_DIRECTORIES="
 				/usr/bin
 				/usr/lib
 				/var/lib/nvidia
-				/usr/share/nvidia
-				/usr/share/egl
-				/usr/share/glvnd
-				/usr/share/X11
+				/usr/share
 "
 
 REQUIRED_MODULES="
