--- a/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
+++ b/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
@@ -2,6 +2,12 @@
 ;
 ; General configuration
 ;
+; **
+; If you want to override settings, drop a new file into
+; /etc/lightdm/qt-lightdm-greeter.d/*.conf
+; instead of replacing this one!
+; **
+;
 ; greeter-icon-theme = name of icon theme to use for the greeter
 ;
 ; greeter-background = /path/to/background/image to set a background image for the login screen
@@ -21,6 +27,7 @@ greeter-bottom-left-logo-file=/etc/branding.svg
 ; new directory style
 greeter-bottom-left-logo-path=/etc/branding.d
 greeter-background-gradient=e8e6e7 ffffff e8e6e7 ffd78b
+greeter-background=/opt/openslx/lightdm/greeter-background.svg
 greeter-message-file=/run/hw-warnings.log
 auto-login-check-cmd=/opt/openslx/lightdm/is-autologin-enabled
 clock-text-style="color:#fff; font-size:14pt; qproperty-alignment: AlignRight; border:none"
