[lightdm-greeter-bwlp] Wrong config entry...

--- a/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
+++ b/core/modules/lightdm-greeter-bwlp/data/etc/lightdm/qt-lightdm-greeter.conf
@@ -10,7 +10,7 @@
 ;
 ; greeter-icon-theme = name of icon theme to use for the greeter
 ;
-; greeter-background = /path/to/background/image to set a background image for the login screen
+; greeter-background-image = /path/to/background/image to set a background image for the login screen
 ;
 ; loginform-offset-x = how far from the left edge of the screen should the loginform be placed. 
 ;      Can be given in pixels, e.g. loginform-offset-x=60px, or in percentage of screen width, e.g. loginform-offset-x=20%.
@@ -27,7 +27,7 @@ greeter-bottom-left-logo-file=/etc/branding.svg
 ; new directory style
 greeter-bottom-left-logo-path=/etc/branding.d
 greeter-background-gradient=e8e6e7 ffffff e8e6e7 ffd78b
-greeter-background=/opt/openslx/lightdm/greeter-background.svg
+greeter-background-image=/opt/openslx/lightdm/greeter-background.svg
 greeter-message-file=/run/hw-warnings.log
 auto-login-check-cmd=/opt/openslx/lightdm/is-autologin-enabled
 clock-text-style="color:#fff; font-size:14pt; qproperty-alignment: AlignRight; border:none"
