--- a/core/modules/alsa/module.conf
+++ b/core/modules/alsa/module.conf
@@ -4,7 +4,7 @@ REQUIRED_BINARIES="
 	alsamixer
 	aplay
 "
-REQUIRED_DIRECTORIES="	/usr/share/alsa
-			/etc/modprobe.d
+REQUIRED_DIRECTORIES="
+	/usr/share/alsa
 "
 
