kernel.config: Enable EFI stub etc.

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -270,6 +270,13 @@ CONFIG_DRM_KMS_HELPER=y
 CONFIG_EFI_ALLOW_SECURE_BOOT_EXIT=y
 CONFIG_EFI_SECURE_BOOT_LOCK_DOWN=y
 CONFIG_EFI_SIGNATURE_LIST_PARSER=y
+CONFIG_EFI_EARLYCON=y
+CONFIG_EFIVAR_FS=y
+CONFIG_EFI_VARS=y
+CONFIG_EFI=y
+CONFIG_EFI_STUB=y
+CONFIG_EFI_MIXED=y
+CONFIG_DMI_SCAN_MACHINE_NON_EFI_FALLBACK=y
 CONFIG_HIO=y
 CONFIG_I2C_MUX_PINCTRL=m
 CONFIG_IGB_DCA=y
@@ -377,9 +384,6 @@ CONFIG_DELL_UART_BACKLIGHT=m
 CONFIG_DNS_RESOLVER=m
 CONFIG_DRM_GEM_CMA_HELPER=y
 CONFIG_DRM_GEM_SHMEM_HELPER=y
-CONFIG_EFI_EARLYCON=y
-CONFIG_EFIVAR_FS=y
-CONFIG_EFI_VARS=y
 CONFIG_HSA_AMD=y
 CONFIG_HYPERV_IOMMU=y
 CONFIG_HWSPINLOCK=y
