[remote-access] Add more possible output names

--- a/core/modules/remote-access/data/opt/openslx/remote-access/xorg.conf
+++ b/core/modules/remote-access/data/opt/openslx/remote-access/xorg.conf
@@ -10,7 +10,8 @@ EndSection
 Section "Device"
 	Identifier "DeviceWarn"
 	Driver "%DRIVER%"
-	Option "ZaphodHeads" "VGA1,VGA-1,VGA2,VGA-2,VGA3,VGA-3,VGA4,VGA-4,LVDS1,LVDS-1,LVDS2,LVDS-2,LVDS3,LVDS-3,LVDS4,LVDS-4,DP1,DP-1,DP2,DP-2,DP3,DP-3,DP4,DP-4,eDP1,eDP-1,eDP2,eDP-2,eDP3,eDP-3,eDP4,eDP-4,HDMI1,HDMI-1,HDMI2,HDMI-2,HDMI3,HDMI-3,HDMI4,HDMI-4,DVI1,DVI-1,DVI2,DVI-2,DVI3,DVI-3,DVI4,DVI-4,DVI-I-11,DVI-I-1-1,DVI-I-12,DVI-I-1-2,DVI-I-13,DVI-I-1-3,DVI-I-14,DVI-I-1-4,DVI-I-21,DVI-I-2-1,DVI-I-22,DVI-I-2-2,DVI-I-23,DVI-I-2-3,DVI-I-24,DVI-I-2-4,DVI-I-31,DVI-I-3-1,DVI-I-32,DVI-I-3-2,DVI-I-33,DVI-I-3-3,DVI-I-34,DVI-I-3-4"
+	Option "ZaphodHeads" "VGA1,VGA-1,VGA2,VGA-2,VGA3,VGA-3,VGA4,VGA-4,LVDS1,LVDS-1,LVDS2,LVDS-2,LVDS3,LVDS-3,LVDS4,LVDS-4,DP1,DP-1,DP2,DP-2,DP3,DP-3,DP4,DP-4,eDP1,eDP-1,eDP2,eDP-2,eDP3,eDP-3,eDP4,eDP-4,HDMI1,HDMI-1,HDMI2,HDMI-2,HDMI3,HDMI-3,HDMI4,HDMI-4,DVI1,DVI-1,DVI2,DVI-2,DVI3,DVI-3,DVI4,DVI-4,DVI-I-11,DVI-I-1-1,DVI-I-12,DVI-I-1-2,DVI-I-13,DVI-I-1-3,DVI-I-14,DVI-I-1-4,DVI-I-21,DVI-I-2-1,DVI-I-22,DVI-I-2-2,DVI-I-23,DVI-I-2-3,DVI-I-24,DVI-I-2-4,DVI-I-31,DVI-I-3-1,DVI-I-32,DVI-I-3-2,DVI-I-33,DVI-I-3-3,DVI-I-34,DVI-I-3-4,DFP-0,DFP-1,DFP-2,DFP-3,CRT-0,CRT-1,CRT-2,CRT-3,DisplayPort-0,DisplayPort-1,DisplayPort-2,DisplayPort-3"
+	Option "AllowEmptyInitialConfiguration" "true"
 	Screen 1
 EndSection
 
