[dnbd3-proxy-mode] explicit Before= on update-etc_issue

--- a/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/setup-dnbd3-proxy.service
+++ b/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/setup-dnbd3-proxy.service
@@ -2,7 +2,7 @@
 Description=DNBD3 proxy server config generator
 Wants=tmp.target
 After=tmp.target
-Before=getty.target
+Before=getty.target update-etc_issue.service
 
 [Service]
 Type=oneshot
