--- a/core/rootfs/rootfs-stage31/module.conf
+++ b/core/rootfs/rootfs-stage31/module.conf
@@ -22,7 +22,10 @@ REQUIRED_KERNEL_MODULES="
 	kernel/drivers/i2c/algos/i2c-algo-bit.ko
 	kernel/drivers/i2c/i2c-core.ko
 	kernel/drivers/net/ethernet
+	kernel/drivers/net/mdio.ko
+	kernel/drivers/net/mii.ko
 	kernel/drivers/net/netconsole.ko
+	kernel/drivers/net/phy
 	kernel/drivers/parport/parport.ko
 	kernel/drivers/platform/x86/mxm-wmi.ko
 	kernel/drivers/platform/x86/wmi.ko
@@ -31,6 +34,7 @@ REQUIRED_KERNEL_MODULES="
 	kernel/drivers/usb/usb-common.ko
 	kernel/drivers/video/backlight/adp8860_bl.ko
 	kernel/drivers/video/backlight/adp8870_bl.ko
+	kernel/drivers/video/fbdev/nvidia/nvidiafb.ko
 	kernel/drivers/video/sis/sisfb.ko
 	kernel/drivers/video/via/viafb.ko
 	kernel/fs/aufs/aufs.ko
@@ -45,7 +49,6 @@ REQUIRED_KERNEL_MODULES="
 	kernel/net/bridge/bridge.ko
 	kernel/net/sunrpc/auth_gss/auth_rpcgss.ko
 	kernel/net/sunrpc/sunrpc.ko
-	kernel/ubuntu/aufs/aufs.ko
 "
 REQUIRED_LIBRARIES="
 	libnss_files
