[etherwake] Fix filename in REQUIRED_FILES

--- a/core/modules/etherwake/module.conf
+++ b/core/modules/etherwake/module.conf
@@ -5,5 +5,5 @@ REQUIRED_BINARIES="
 	ethtool
 "
 REQUIRED_FILES="
-	/etc/udev/rules.d/99-enable-wol.rules
+	/etc/udev/rules.d/99-enable-wol-disable-pause.rules
 "
