[dnbd3] back to master branch

--- a/core/modules/dnbd3/module.conf
+++ b/core/modules/dnbd3/module.conf
@@ -1,6 +1,6 @@
 #!/bin/bash
 REQUIRED_MODULES="kernel"
-REQUIRED_GIT="https://git.openslx.org/dnbd3.git||fuse_ll"
+REQUIRED_GIT="https://git.openslx.org/dnbd3.git"
 REQUIRED_BINARIES="
 	dnbd3-fuse
 	fusermount
