[nvidia-libs] Update paths

--- a/core/modules/nvidia-libs/module.conf
+++ b/core/modules/nvidia-libs/module.conf
@@ -1,15 +1,13 @@
 #!/bin/bash
 
 REQUIRED_FILES="
-				/etc/OpenCL/vendors/nvidia.icd
 				@/opt/openslx/etc/nvidia.whiteout
 "
 
 REQUIRED_DIRECTORIES="
-				/usr/bin
-				/usr/lib
+				/etc
+				/usr
 				/var/lib/nvidia
-				/usr/share
 "
 
 REQUIRED_MODULES="
