[qemu] Rename 'qemukvm' occurrences in the core module to 'qemu'

--- a/core/modules/qemu/data/etc/systemd/system/qemu.service
+++ b/core/modules/qemu/data/etc/systemd/system/qemu.service
@@ -1,9 +1,9 @@
 [Unit]
-Description=Sets up the virtual box environment
+Description=Sets up the QEMU hypervisor
 Requires=run-virt-env.service
 After=run-virt-env.service
 
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/opt/openslx/scripts/systemd-qemukvm_env start
+ExecStart=/opt/openslx/scripts/systemd-qemu_env start
