[libvirt] Install/Copy package files into MiniLinux

--- a/core/modules/libvirt/module.conf
+++ b/core/modules/libvirt/module.conf
@@ -1,1 +1,57 @@
 #!/bin/bash
+
+REQUIRED_BINARIES="
+	libvirtd
+	virtlockd
+	virtlogd
+	virt-sanlock-cleanup
+	remote-viewer
+	virsh
+	virt-admin
+	virt-host-validate
+	virt-login-shell
+	virt-pki-validate
+	virt-viewer
+	virt-xml-validate
+	libvirt-guests.sh
+	libvirt_iohelper
+	libvirt_leaseshelper
+	libvirt_lxc
+	libvirt_parthelper
+	libvirt_sanlock_helper
+	virt-aa-helper
+	virt-login-shell-helper
+"
+REQUIRED_FILES="
+	/usr/lib/x86_64-linux-gnu/libvirt/connection-driver/libvirt_driver_interface.so
+	/usr/lib/x86_64-linux-gnu/libvirt/connection-driver/libvirt_driver_network.so
+	/usr/lib/x86_64-linux-gnu/libvirt/connection-driver/libvirt_driver_nodedev.so
+	/usr/lib/x86_64-linux-gnu/libvirt/connection-driver/libvirt_driver_nwfilter.so
+	/usr/lib/x86_64-linux-gnu/libvirt/connection-driver/libvirt_driver_secret.so
+	/usr/lib/x86_64-linux-gnu/libvirt/connection-driver/libvirt_driver_storage.so
+	/usr/lib/x86_64-linux-gnu/libvirt/lock-driver/lockd.so
+	/usr/lib/x86_64-linux-gnu/libvirt/storage-backend/libvirt_storage_backend_disk.so
+	/usr/lib/x86_64-linux-gnu/libvirt/storage-backend/libvirt_storage_backend_fs.so
+	/usr/lib/x86_64-linux-gnu/libvirt/storage-backend/libvirt_storage_backend_iscsi.so
+	/usr/lib/x86_64-linux-gnu/libvirt/storage-backend/libvirt_storage_backend_logical.so
+	/usr/lib/x86_64-linux-gnu/libvirt/storage-backend/libvirt_storage_backend_mpath.so
+	/usr/lib/x86_64-linux-gnu/libvirt/storage-backend/libvirt_storage_backend_scsi.so
+	/usr/lib/x86_64-linux-gnu/libvirt/storage-file/libvirt_storage_file_fs.so
+"
+REQUIRED_DIRECTORIES="
+	/etc
+	/usr/lib/libvirt
+	/usr/lib/systemd
+	/usr/share/mime
+	/usr/share/icons
+	/usr/share/systemtap
+	/usr/share/apport
+	/usr/share/augeas
+	/usr/share/bash-completion
+	/usr/share/polkit-1
+	/usr/share/appdata
+	/usr/share/bug
+	/usr/share/locale
+	/usr/share/applications
+	/var
+"
