[qemu] Add filtering/transformation of config files and VM management

--- a/core/modules/qemu/runvirt-plugin-qemu/.gitignore
+++ b/core/modules/qemu/runvirt-plugin-qemu/.gitignore
@@ -1,3 +1,14 @@
-/target/
-.classpath
-.settings/
+/testing
+/.settings
+/.project
+/.classpath
+/target
+/gen-java
+*~
+!src/
+!test/
+*.swp
+
+# Ignore IntelliJ Project Files
+/.idea
+*.iml
