[xscreensaver] Update to 6.00

--- a/core/modules/xscreensaver/module.conf
+++ b/core/modules/xscreensaver/module.conf
@@ -9,6 +9,8 @@ REQUIRED_GIT="
 REQUIRED_PREFIX="/opt/openslx/bin"
 REQUIRED_BINARIES="
 	xscreensaver
+	xscreensaver-auth
 	xscreensaver-command
+	xscreensaver-gfx
 	bwlp-screensaver
 "
