[xscreensaver] Revert to 5.40
6.00 is too broken as of now:
 * Hack randomly stops after standby
 * Hack/Saver turns invisible after display reconnect

--- a/core/modules/xscreensaver/module.conf
+++ b/core/modules/xscreensaver/module.conf
@@ -2,15 +2,14 @@
 REQUIRED_MODULES="
 	qt5core
 "
+# Switch back to branch "openslx" once 6.x is fixed
 REQUIRED_GIT="
-	git://git.openslx.org/openslx-ng/xscreensaver.git|openslx
+	git://git.openslx.org/openslx-ng/xscreensaver.git||bfe7aeb88fac24b
 	git://git.openslx.org/openslx-ng/bwlp-screensaver.git
 "
 REQUIRED_PREFIX="/opt/openslx/bin"
 REQUIRED_BINARIES="
 	xscreensaver
-	xscreensaver-auth
 	xscreensaver-command
-	xscreensaver-gfx
 	bwlp-screensaver
 "
