[dnbd3-proxy-mode] Increase priority etc. of dnbd3-server

--- a/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/dnbd3-proxy.service
+++ b/core/modules/dnbd3-proxy-mode/data/etc/systemd/system/dnbd3-proxy.service
@@ -10,3 +10,7 @@ Restart=always
 RestartSec=3
 TimeoutStopSec=10
 LimitNOFILE=65536
+LimitNICE=-2
+IOSchedulingClass=best-effort
+IOSchedulingPriority=2
+OOMScoreAdjust=-100
