[openjdk-8-jre-headless] Remove build support of Java 8 JRE for MiniLinux

--- a/core/modules/openjdk-8-jre-headless/module.conf
+++ b/core/modules/openjdk-8-jre-headless/module.conf
@@ -1,10 +1,5 @@
 #!/bin/bash
 
-REQUIRED_BINARIES="
-	java
-"
-
-REQUIRED_DIRECTORIES="
-	/etc
-	/usr/lib/jvm/java-8-openjdk-amd64/jre/lib
-"
+REQUIRED_BINARIES=""
+REQUIRED_LIBRARIES=""
+REQUIRED_DIRECTORIES=""
