[qemu] Remove build support for MiniLinux

--- a/core/modules/qemu/module.conf
+++ b/core/modules/qemu/module.conf
@@ -5,32 +5,6 @@ REQUIRED_MODULES="
 	openjdk-8-jre-headless
 "
 
-REQUIRED_BINARIES="
-	ivshmem-client
-	ivshmem-server
-	kvm
-	qemu-img
-	qemu-io
-	qemu-nbd
-	qemu-pr-helper
-	qemu-system-aarch64
-	qemu-system-arm
-	qemu-system-i386
-	qemu-system-x86_64
-	virtfs-proxy-helper
-	qemu-make-debian-root
-	qemu-bridge-helper
-	vhost-user-gpu
-"
-
-REQUIRED_DIRECTORIES="
-	/etc
-	/usr/share/ovmf
-	/usr/share/OVMF
-	/usr/share/qemu
-	/usr/share/seabios
-"
-
-REQUIRED_FILES="
-	/opt/openslx/share/java/runvirt-plugin-qemu.jar
-"
+REQUIRED_BINARIES=""
+REQUIRED_LIBRARIES=""
+REQUIRED_DIRECTORIES=""
